# serializer version: 1
# name: test_setcover_streamk_emits_golden[sk_bgemm_tdm_split]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_UserArgs_MT16x16x128_MI16xyM1-DDeGdRimyqTGU6Ju947Hpu9Rt_0mUNrXBcvhnxk=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_UserArgs_MT16x16x64_MI16x1A8qYRIcQeau_s63CR4KqeuSm9jcHcDgTO_lUsN412r8=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_UserArgs_MT16x16x64_MI16x1wIlEHMdSpdsn6wUcRhVymzXCLB5yA0cYPz0h5LCaOZQ=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_UserArgs_MT256x128x128_MI1e_Va0Oh0GI2jAou29NaF4US6gsw_S7Ctl3773XCYDYw=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_UserArgs_MT256x128x64_MI16Cwxe2a7wefWyv8tNX2q0cziQXLly-c70GrRB1DDZNcc=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_UserArgs_MT32x32x128_MI16xOXyTOdKNUNkVw_VtgenK_RZeQ7oO-F831CPtf6Y146w=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_UserArgs_MT32x32x64_MI16x1ORuUifAiN4G2ZiRH2qizit4mjPIUecKijQCINKlLsQA=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_UserArgs_MT32x32x64_MI16x1ad-nqr6sGxzk6XJe_rm4I-Rt_3N19RLcZqHX67EKBqM=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_streamk_emits_golden[sk_dynamic]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT128x128x16_MI32x32bZ-ndtxGv5yRfMO01Co7Se1vAmIAcbutaUdHbgI6D3s=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT192x192x16_MI32x32rfZobalM5eZ1ufrhACf4Kt2hYcGoTiBRCQ4rI_YGTTI=',
      'err': -2,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT256x128x16_MI16x16Alsuj06_IuIxpRV7N1nLwjZUVJrsHQ13Qz6GdQzcpG0=',
      'err': -2,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT256x256x16_MI16x16IHVi5026eGupoCQtHx2w1kqjRf-CkU--bxdLvTh10OA=',
      'err': -2,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT256x256x16_MI32x32bP06WdcwFzTeJsc0fHf_JYMBpGoNi_Y3aSCaYpmGI6Y=',
      'err': -2,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT256x32x16_MI16x16x7FLoVLVbTLRgYG6lXlLFbBE-q7OmjAsMn-75VcSyBDk=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT256x64x16_MI16x16xAQ8dBdFcr2rKEl9cnkwxZb2J-Xv-IBFGjXkw4vZYzQI=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT64x64x16_MI32x32x1tgjybWZIgCL4bXcx6Gh6tR7OpJoJvj4lOQo0mkNofoQ=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_streamk_emits_golden[sk_dynamic_work_stealing]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT128x128x16_MI32x32No_I2fn0raze9CWaTxvGzeBA06txGn-gBC3QTCA8lQQ=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT128x128x16_MI32x32bZ-ndtxGv5yRfMO01Co7Se1vAmIAcbutaUdHbgI6D3s=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT64x64x16_MI16x16x1ClAj6Pg75Qvfiiu4iJKl945UIrlct7aQMuU57PU6fYY=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT64x64x16_MI16x16x1QJfEeaWJvaNGmALAPinz5QMJ7zJSgGSGQV4VmN48-rQ=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_streamk_emits_golden[sk_halfplr_f8gemm_tdm]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_F8F8S_BH_UserArgs_MT128x128x256_MHQduh6cDP9WQ1r-xMZ1RPQmqgy8cIbx7tUEMp508cng=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F8F8S_BH_UserArgs_MT128x128x256_MPo-RhorVIbcgz6nDvgnwTqlCiCmTWdUcfrqk_VBA4Bk=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F8F8S_BH_UserArgs_MT256x256x256_MTyu1--_GaX5QjTun0oqFNLEwrJi86MZ7J9AMo02RO5g=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F8F8S_BH_UserArgs_MT256x256x256_Me7xr1oJu2bhDV4YLD4HrsjK9g2bzSfTJi5xsIlFy2f0=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F8F8S_BH_UserArgs_MT64x64x256_MI1IsKsmBOGymZ-Ud-Q9_cU5lr5wBvT6mUuh0wDvxbwlY0=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F8F8S_BH_UserArgs_MT64x64x256_MI1N5olT18bEi6P2ywbjn5mM6iLwQlMO4731s7IBK4awMo=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F8F8S_BH_UserArgs_MT64x64x256_MI1YLvNOJtsoNFUgGAuS08likJ9kemYw6H3JqUxNnwygOE=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F8F8S_BH_UserArgs_MT64x64x256_MI1vep1xlYd_stEv0uEeZlFDyF3XcKvuD9hh94MtOkbChg=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_streamk_emits_golden[sk_hybrid_work_stealing]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT128x128x16_MI32x32WztN9cymGZJz-k3i4CRVQ8524JrRcP7W4lh2lOX9H7E=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT128x128x16_MI32x32yGZOm_MsDpcqvVKqsOPCcjxKZbDnRRP3mS07RYF9GOg=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT64x64x16_MI16x16x1CYdRjuqpCLY5s80jUdx5f2lTA0GNoDHJQ2QenPSMJw8=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT64x64x16_MI16x16x1O3mHI6qQcHL26_JoI4G2_zcNhpkEk08n9vJOip9YX5U=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_streamk_emits_golden[sk_mx32f4_quick]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_F4SS_MXAE8B32_MXBE8B32_BH_Bias_HA_ViXN_QUu3sDYqbxcngaS3RcTNNzp76JggU7VmpiGwY=',
      'err': -2,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F4SS_MXAE8B32_MXBE8B32_BH_Bias_HAjktUHd_5-zHlRFfwFBEMb0i_DThHkAidaHKkZquaIbI=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_streamk_emits_golden[sk_mxf4gemm_pap]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_F4SS_MXAE8B32_MXBE8B32_BH_UserArg1RIiVEAGLq69Nq589jEnatllIMI1pz9fnMDxuZ55gE4=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F4SS_MXAE8B32_MXBE8B32_BH_UserArg42HkJnvI58Eu3ndTTi4KKnUzgr_04evpq8BWb4T70TU=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F4SS_MXAE8B32_MXBE8B32_BH_UserArgfrpUNMa4gseeq1vdX3t-c7PMxcHVNWt7F142IIH2vms=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F4SS_MXAE8B32_MXBE8B32_BH_UserArgjcjyvbEtNzGeq7BZHQ2LrSHZI1U1kP5w9W5DTzA3vfo=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_streamk_emits_golden[sk_mxf4gemm_pap_prefetchgl2]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_F4SS_MXAE8B32_MXBE8B32_BH_UserArg0cclKyvzF5Hi7Vh8W3K9lwEapIizfS7_PiLlp-USBpE=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F4SS_MXAE8B32_MXBE8B32_BH_UserArg9GS7JJOK2jkn_HbqWFRf6BEj4JdfePcMpLcs8KLGU_U=',
      'err': -2,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F4SS_MXAE8B32_MXBE8B32_BH_UserArgT3BUSfDUaLq5XmQqyJ9YK-scuSniPKXNV7yjKaY2l6I=',
      'err': -2,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F4SS_MXAE8B32_MXBE8B32_BH_UserArgZ7VQZyWa5quS0XHwDKZkbXoUXNpdvKqPQD4wyR4APtE=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F4SS_MXAE8B32_MXBE8B32_BH_UserArgZyqWymZka5m9QzJV9zCvmX_iexybSstQmQkA5z8VRZE=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F4SS_MXAE8B32_MXBE8B32_BH_UserArga7bKLSt432ROEA2vYYULr5IF_0i7_E9nhrm1qaIbyEg=',
      'err': -2,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F4SS_MXAE8B32_MXBE8B32_BH_UserArggK6wa6vM7QYZC_HX331-1WxfhrVmKw6xgr4Y0ygB-co=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F4SS_MXAE8B32_MXBE8B32_BH_UserArguRbR85nGicDr4QFzpb7umnz2ek_YGt1gpyQjv4hQADQ=',
      'err': -2,
    }),
  ])
# ---
# name: test_setcover_streamk_emits_golden[sk_mxf8_force_dp_only_halfplr_tdm_pap]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_F8F8S_MXAE8B32_MXBE8B32_BH_UserArR7r-NUNcfqGGWrHvyUsR0D6B6t6BN0IpJU3WpigZzUw=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F8F8S_MXAE8B32_MXBE8B32_BH_UserAr_SAHxJVbCyv4BWs_2Er8F4X7sI_DSMWdG2YrFkjsIeo=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F8F8S_MXAE8B32_MXBE8B32_BH_UserArfmwU0AfJ4OwPi222xUffRVqDZpsYyI7DoepMO7ArX9w=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F8F8S_MXAE8B32_MXBE8B32_BH_UserArvGXfu-9Uh_AtEeoms88y_ujUuh9dgaTqfPrj5mtdadw=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_streamk_emits_golden[sk_mxf8gemm_tdm_split]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_F8SS_MXAE8B16_MXBE8B16_BH_UserArg6fvmsY0XYQuvsf-Us2_OgGA4NKUm-OGUdjQWr9BNFwc=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F8SS_MXAE8B16_MXBE8B16_BH_UserArgCbdPdAZqZKpmweI8ajrrNUMrv2tPbUMyd7niEiy9cWM=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F8SS_MXAE8B16_MXBE8B16_BH_UserArgPL2I1u92ASpKMC6lLKHTQ6E-Vir83wI0CtKRlaprD28=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F8SS_MXAE8B16_MXBE8B16_BH_UserArgrwydEEOsfjEhQZkfjaeKn3a_MAVcx4Dp4X2eYqQ20BE=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_streamk_emits_golden[sk_sgemm_pap]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT128x128x16_MI16x1656FhXoORH7MQI6RBLmNMgI-LfUvVWaADXH-3NGlP-Sw=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT128x128x16_MI16x16LjdylUZ90szUZzbliTvwQjL4ODUyFeU318ePD5rLA58=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT128x128x16_MI16x16YJNqBWhKNnbgYXBVQTsNNjSkxvVsXAkm8q2Q27oGN8A=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT128x128x16_MI16x16e4W-4QItDgeeW4znNSn7xAY6aR6qH-e7BycDI6Ax8EU=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT128x128x16_MI16x16g_X5FyY2Vwy1Jp2HFMRtnhrX5e1hq-E5bYw-_Xem90U=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT128x128x16_MI16x16heNUFaptA7mJrJovfRTb8lxf6Xe6BOfuWHilrAnuqmE=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT128x128x16_MI16x16jccJ3BJih7hQS2-xAy_WRK3cp4VzwQJ237bJlsath0Q=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT128x128x16_MI16x16p9JdlIqlRvp8h04UKxhclQiQbfE5480AvysO_5sXQVw=',
      'err': 0,
    }),
  ])
# ---
